crates/test-generator/tests/snapshots/tsx/test_generated_ambient_declaration.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
declare const value3: string;

AST:
(program
  (ambient_declaration
    (lexical_declaration
      (variable_declarator
        name: (identifier "value3")
        type: (type_annotation
          (predefined_type "string")
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "value3",
            position: Position {
                start_line: 1,
                start_column: 15,
                end_line: 1,
                end_column: 21,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
