crates/test-generator/tests/snapshots/tsx/test_generated_array_type.snap
---
source: generated-tests/tests/tsx.rs
expression: snapshot_content
---
Source Code:
const arr: number[] = [1, 2, 3];

AST:
(program
  (lexical_declaration
    (variable_declarator
      name: (identifier "arr")
      type: (type_annotation
        (array_type
          (predefined_type "number")
        )
      )
      value: (array
        (number "1")
        (number "2")
        (number "3")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "arr",
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 10,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
