crates/test-generator/tests/snapshots/tsx/test_generated_as_expression.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
value4 as Type1

AST:
(program
  (expression_statement
    (as_expression
      (identifier "value4")
      (type_identifier "Type1")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage { position: { 1:1 to 1:7 }, name: "value4", kind: Identifier, context: None },
        Usage { position: { 1:11 to 1:16 }, name: "Type1", kind: TypeIdentifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
