crates/test-generator/tests/snapshots/tsx/test_generated_assignment_expression.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
x1 = y1

AST:
(program
  (expression_statement
    (assignment_expression
      left: (identifier "x1")
      right: (identifier "y1")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage { position: { 1:1 to 1:3 }, name: "x1", kind: Identifier, context: None },
        Usage { position: { 1:6 to 1:8 }, name: "y1", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
