crates/test-generator/tests/snapshots/tsx/test_generated_augmented_assignment_expression.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
x2 += y2

AST:
(program
  (expression_statement
    (augmented_assignment_expression
      left: (identifier "x2")
      right: (identifier "y2")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage {
            name: "x2",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 1,
                end_line: 1,
                end_column: 3,
            },
            context: None,
        },
        Usage {
            name: "y2",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 7,
                end_line: 1,
                end_column: 9,
            },
            context: None,
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
