crates/test-generator/tests/snapshots/tsx/test_generated_binary_expression.snap
---
source: crates/test-generator/tests/tsx.rs
expression: snapshot_content
---
Source Code:
a1 + b1

AST:
(program
  (expression_statement
    (binary_expression
      left: (identifier "a1")
      right: (identifier "b1")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [],
    dependencies: [],
    usage: [
        Usage { position: { 1:1 to 1:3 }, name: "a1", kind: Identifier, context: None },
        Usage { position: { 1:6 to 1:8 }, name: "b1", kind: Identifier, context: None },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "TSX",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
